--- a/task3/index01_Zinchenko_B_A_Kruglov_V_A.html
+++ b/task3/index01_Zinchenko_B_A_Kruglov_V_A.html
@@ -19,7 +19,7 @@
         new Vue({
             el: '#app',
             data: {
-                url: 'file:///C:/Users/DiGSt/Desktop/%D0%A3%D1%87%D0%B5%D0%B1%D0%B0/web/Web-programming/index.html',
+                url: '../index.html',
                 title: 'Сайт визитка',
                 name: 'Ссылка на кое что'
             }
