--- a/task3/index01_Zinchenko_B_A_Kruglov_V_A.html
+++ b/task3/index01_Zinchenko_B_A_Kruglov_V_A.html
@@ -11,8 +11,8 @@
     <div id="app">
         <h2>Сайт-визитка</h2>
         <p>Ссылки на ресурс:</p>
-        <a :href="url" :title="title" target="_blank">{{ name }}</a><br>
-        <a :href="url" :title="title" target="_blank">{{ name }}</a>
+        <a v-bind:href="url" v-bind:title="title" v-bind:target="target">{{ Name }}</a><br>
+        <a v-bind:href="url" v-bind:title="title" v-bind:target="target">{{ Name }}</a>
     </div>
 
     <script>
@@ -21,9 +21,11 @@
             data: {
                 url: '../index.html',
                 title: 'Сайт визитка',
-                name: 'Ссылка на кое что'
+                Name: 'Ссылка на ресурс',
+                target: '_blank'
             }
         });
     </script>
 </body>
 </html>
+
