--- a/task3/index04_Zinchenko_B_A_Kruglov_V_A.html
+++ b/task3/index04_Zinchenko_B_A_Kruglov_V_A.html
@@ -3,54 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Условная отрисовка с кнопками</title>
+    <title>Переключение шаблонов</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
 </head>
 <body>
     <div id="app">
-        <!-- Обычный список для выбора "показать" или "скрыть" -->
-        <div>
-            <button @click="visibility = 'show'">Показать</button>
-            <button @click="visibility = 'hide'">Скрыть</button>
-        </div>
-
-        <!-- Отображение текущего шаблона в зависимости от выбора -->
-        <h1 v-if="visibility === 'show'">Текущий шаблон: {{ templates[currentTemplate] }}</h1>
-
-        <!-- Первая кнопка: прокручивает шаблоны, затем исчезает -->
-        <button v-if="showFirstButton" @click="nextTemplateFirstButton">Кнопка 1</button>
+        <h2>Шаблоны</h2>
         
-        <!-- Вторая кнопка: становится видимой, когда первая исчезает -->
-        <button v-if="!showFirstButton" @click="nextTemplateSecondButton">Кнопка 2</button>
+        <label for="visibility">Отображение полей:</label>
+        <select v-model="visibility">
+            <option value="show">Показать</option>
+            <option value="hide">Скрыть</option>
+        </select>
+
+        <!-- Отображение полей, если выбрано "Показать" -->
+        <div v-if="visibility === 'show'">
+            <div v-if="currentTemplate === 'Author'">
+                <p>Author: <input type="text" v-model="author"></p>
+            </div>
+            <div v-if="currentTemplate === 'Title'">
+                <p>Title: <input type="text" v-model="title"></p>
+            </div>
+            <div v-if="currentTemplate === 'Editor'">
+                <p>Editor: <input type="text" v-model="editor"></p>
+            </div>
+            <div v-if="currentTemplate === 'Publisher'">
+                <p>Publisher: <input type="text" v-model="publisher"></p>
+            </div>
+
+            <!-- Первая кнопка: прокручивает шаблоны, затем исчезает -->
+            <button v-if="showFirstButton" @click="nextField('first')">Кнопка 1</button>
+            <!-- Вторая кнопка: становится видимой, когда первая исчезает -->
+            <button v-if="!showFirstButton && showSecondButton" @click="nextField('second')">Кнопка 2</button>
+        </div>
     </div>
 
     <script>
         new Vue({
             el: '#app',
             data: {
-                templates: ['Author', 'Title', 'Editor', 'Publisher'], // Шаблоны
-                currentTemplate: 0, // Текущий индекс шаблона
-                showFirstButton: true, // Показывать ли первую кнопку
-                visibility: 'show' // Управление видимостью через кнопки "показать/скрыть"
+                currentTemplate: 'Author', 
+                templates: ['Author', 'Title', 'Editor', 'Publisher'], 
+                index: 0, 
+                visibility: 'show', 
+                showFirstButton: true, 
+                showSecondButton: false, 
+                author: '',
+                title: '',
+                editor: '',
+                publisher: ''
             },
             methods: {
-                // Метод для первой кнопки, которая переключает шаблоны и передает управление второй кнопке
-                nextTemplateFirstButton() {
-                    if (this.currentTemplate < this.templates.length - 1) {
-                        this.currentTemplate++;
-                    }
-                    if (this.currentTemplate === this.templates.length - 1) {
-                        this.showFirstButton = false; // Скрыть первую кнопку
-                    }
-                },
-                // Метод для второй кнопки, которая переключает шаблоны и передает управление первой кнопке
-                nextTemplateSecondButton() {
-                    if (this.currentTemplate < this.templates.length - 1) {
-                        this.currentTemplate++;
-                    }
-                    if (this.currentTemplate === this.templates.length - 1) {
-                        this.currentTemplate = 0; // Вернуть индекс шаблона к началу
-                        this.showFirstButton = true; // Скрыть вторую кнопку и показать первую
+                // Переключение полей и кнопок
+                nextField(button) {
+                    if (this.index < this.templates.length - 1) {
+                        this.index++;
+                        this.currentTemplate = this.templates[this.index];
+                    } else {
+                        // Если текущая кнопка завершает цикл, переключаем на другую
+                        this.index = 0;
+                        this.currentTemplate = this.templates[this.index];
+                        if (button === 'first') {
+                            this.showFirstButton = false;
+                            this.showSecondButton = true;
+                        } else {
+                            this.showFirstButton = true;
+                            this.showSecondButton = false;
+                        }
                     }
                 }
             }
